; ModuleID = '/home/carl/AnghaBench/tmux/extr_format.c_format_cb_start_command.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_format.c_format_cb_start_command.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.format_tree = type { %struct.window_pane* }
%struct.window_pane = type { i32, i32 }
%struct.format_entry = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.format_tree*, %struct.format_entry*)* @format_cb_start_command to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @format_cb_start_command(%struct.format_tree* %0, %struct.format_entry* %1) #0 {
  %3 = alloca %struct.format_tree*, align 8
  %4 = alloca %struct.format_entry*, align 8
  %5 = alloca %struct.window_pane*, align 8
  store %struct.format_tree* %0, %struct.format_tree** %3, align 8
  store %struct.format_entry* %1, %struct.format_entry** %4, align 8
  %6 = load %struct.format_tree*, %struct.format_tree** %3, align 8
  %7 = getelementptr inbounds %struct.format_tree, %struct.format_tree* %6, i32 0, i32 0
  %8 = load %struct.window_pane*, %struct.window_pane** %7, align 8
  store %struct.window_pane* %8, %struct.window_pane** %5, align 8
  %9 = load %struct.window_pane*, %struct.window_pane** %5, align 8
  %10 = icmp eq %struct.window_pane* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  br label %22

12:                                               ; preds = %2
  %13 = load %struct.window_pane*, %struct.window_pane** %5, align 8
  %14 = getelementptr inbounds %struct.window_pane, %struct.window_pane* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.window_pane*, %struct.window_pane** %5, align 8
  %17 = getelementptr inbounds %struct.window_pane, %struct.window_pane* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @cmd_stringify_argv(i32 %15, i32 %18)
  %20 = load %struct.format_entry*, %struct.format_entry** %4, align 8
  %21 = getelementptr inbounds %struct.format_entry, %struct.format_entry* %20, i32 0, i32 0
  store i32 %19, i32* %21, align 4
  br label %22

22:                                               ; preds = %12, %11
  ret void
}

declare dso_local i32 @cmd_stringify_argv(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
